--- a/gb/23/6/2/n14008785.md
+++ b/gb/23/6/2/n14008785.md
@@ -1,69 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>第20届苗栗县议会 余文忠许樱萍议员质询</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14008786-617497-600x400.jpeg" />
 <h6>县长钟东锦表示很重视教育扎根，国民守法，坚持老师参与行穿线上下学安全，老人安置中心以公有，对象中低收入为主，干净生活管理为原则。 （许享富 ／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年06月02日讯】（大纪元记者陈文敏台湾苗栗报导）余文忠、许樱萍议员提出行穿线交通、安养中心设置、流感肠病毒猴痘症，COVID19防疫，都市更新筑梦踏实，田寮圳治理，关怀据点更新。苗栗县余文忠<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AE%AE%E5%91%98%E8%B4%A8%E8%AF%A2.md#1">议员质询</a>，鼓励校园交通导护志工加入义勇警察志工团队，共同维护学生上下学，通行安全。</p>
-<figure id="14008793" aria-describedby="caption-14008793" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14008793-617506-450x291.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14008793-617506-450x291.jpeg" alt="行穿线的学童、行人安全 " width="500" /></a><figcaption id="caption-14008793" class="wp-caption-text">行穿线的学童、行人安全 （许享富／大纪元）</figcaption></figure>
-<p>欢迎年青的朋友们踊跃加入义交志工的行列。</p>
+<p>【大纪元2023年06月02日讯】（大纪元记者陈文敏台湾苗栗报导）余文忠、许樱萍议员提出行穿线交通、安养中心设置、流感肠病毒猴痘症，COVID19防疫，都市更新筑梦踏实，田寮圳治理，关怀据点更新。苗栗县余文忠议员质询，鼓励校园交通导护志工加入义勇警察志工团队，共同维护学生上下学，通行安全。</p>
+<figure id="14008793" aria-describedby="caption-14008793" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14008793-617506-450x291.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14008793-617506-450x291.jpeg" alt="行穿线的学童、行人安全 " width="500" /></a><figcaption id="caption-14008793" class="wp-caption-text">行穿线的学童、行人安全 （许享富／大纪元）</figcaption></figure>
+<h2>欢迎年青的朋友们踊跃加入义交志工的行列</h2>
 <p>余文忠指出，苗栗市便利交通：苗栗市新川里、沿南势溪河堤共构，衔接新英里、功维叙隧道，再到国立联合大学八甲校区。南区“新辟大学城环市道路”，苗栗市便利交通，苗栗市新川里、沿南势溪河堤共构衔接新英里、功维叙隧道。再到国立联合大学八甲校区，南区“新辟大学城环市道路”。</p>
 <p>余文忠表示，活化苗栗市新川里周边发展，从新川里沿着南势溪，衔接新英里、功维叙、联合大学八甲校区，做为苗栗的新外环道，工务处回复曾经有“中二高（台6线-台13线）联络道路工程”规划，此路线已经串联前面所说的重要地点。余文忠指出，新辟路线长度、规划路宽、车道配置、经费概算等内容预估：本计划总长约7.195公里，计划宽度21.5公尺，双向实体分隔，为标准2车道，在2014年时，概估工程费16亿34,00万元，用地补偿费6亿8000万元，合计总工程费23亿1400万元，经过近十年，目前物价上涨等等因素，本案所需经费应该近30亿元。</p>
 <p>钟县长对于苗栗便捷交通建设不余遗力，全县应该有许多待改善路线，甚至目前中央政府大力推动的改善人行环境，摆脱行人地狱的丑名，种种建设都需要花费预算，在县府有限财源情况下，请古处长在盘点县内各项重要交通建设时，此计划路段是否可能纳入评估排序？余文忠表示，老旧传统市场活化；苗栗市都市更新计划已经执行1-2年，请问目前的进度？尤其是在南苗市场周边区域，南苗市场已有六、七十年历史，为苗栗市最大的传统零售商区，但近年来受到大型量贩店及连锁商店影响，发展停滞甚至越来越没落，且建筑老旧、巷道狭窄、环境脏乱，降低乡亲购买意愿，请问工商发展处处长是否有机会趁这次都市更新的机会，让南苗市场像台北市环南市场一样，真正活化为苗栗市带来更好的发展空间，带动地方的经济产业。</p>
-<p>苗栗县许樱萍<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AE%AE%E5%91%98%E8%B4%A8%E8%AF%A2.md#1">议员质询</a></p>
+<h2>苗栗县许樱萍议员质询</h2>
 <p>许樱萍指出，天花湖水库兴建工程是否继续进行？行穿线交通安全的督导，安养中心设置，流感肠病毒猴痘症，COVID19防疫问题。</p>
 <p>县长钟东锦表示，行穿线仍然要老师继续督导，从小教育学童养成守法习惯，将来才不会误入歧途。安养设置以公家、干净生活管理，中低收入者申请为主。</p>
-<figure id="14008788" aria-describedby="caption-14008788" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14008788-617499-450x675.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14008788-617499-450x675.jpeg" alt="议员许樱萍提出防疫、行穿线安全督导问题 " width="500" /></a><figcaption id="caption-14008788" class="wp-caption-text">议员许樱萍提出防疫、行穿线安全督导问题 （许享富 ／大纪元）</figcaption></figure>
-<figure id="14008787" aria-describedby="caption-14008787" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14008787-617498-450x675.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/06/id14008787-617498-450x675.jpeg" alt="议员佘文忠提出苗市盲肠田寮圳的治理，都更进度、危楼处理、头屋乡好山好水观光 推展 " width="500" /></a><figcaption id="caption-14008787" class="wp-caption-text">议员佘文忠提出苗市盲肠田寮圳的治理，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%BD%E6%9B%B4.md#1">都更</a>进度、危楼处理、头屋乡好山好水观光 推展 （许享富 ／大纪元）</figcaption></figure>
+<figure id="14008788" aria-describedby="caption-14008788" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14008788-617499-450x675.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14008788-617499-450x675.jpeg" alt="议员许樱萍提出防疫、行穿线安全督导问题 " width="500" /></a><figcaption id="caption-14008788" class="wp-caption-text">议员许樱萍提出防疫、行穿线安全督导问题 （许享富 ／大纪元）</figcaption></figure>
+<figure id="14008787" aria-describedby="caption-14008787" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/06/id14008787-617498-450x675.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2023/06/id14008787-617498-450x675.jpeg" alt="议员佘文忠提出苗市盲肠田寮圳的治理，都更进度、危楼处理、头屋乡好山好水观光 推展 " width="500" /></a><figcaption id="caption-14008787" class="wp-caption-text">议员佘文忠提出苗市盲肠田寮圳的治理，都更进度、危楼处理、头屋乡好山好水观光 推展 （许享富 ／大纪元）</figcaption></figure>
 <p>责任编辑：唐音</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/18/n13383838.md#1">陈凯荣议员质询关心警员保险与保障</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928750.md#1">连续9次加息 储行行长面临两党议员质询</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999617.md#1">大型都更案涉诈贷 台土银：房子已设定抵押不会有呆账</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999633.md#1">都更案涉诈贷68亿 台金管会：银行将公告重大偶发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/22/n14001959.md#1">最大自办都更“至善元”诈贷案 台金管会曝光3家公股银踩雷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005878.md#1">第20届苗栗县议会 温俊勇、黎尚安议员质询</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007284.md#1">第20届苗栗县议会黄声全 陈光轩议员质询</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/2/n14008781.md#1">“竹风县艺”6/3日起巡演 首场纸风车打头阵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/2/n14008796.md#1">县长杯射箭锦标赛登场 副县长为赛事揭幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14008013.md#1">2023年校园廉洁 从晓做起 影片成果发表</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/18/n13383838.md#1">陈凯荣议员质询关心警员保险与保障</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/13/n13928750.md#1">连续9次加息 储行行长面临两党议员质询</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/18/n13999617.md#1">大型都更案涉诈贷 台土银：房子已设定抵押不会有呆账</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/18/n13999633.md#1">都更案涉诈贷68亿 台金管会：银行将公告重大偶发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/22/n14001959.md#1">最大自办都更“至善元”诈贷案 台金管会曝光3家公股银踩雷</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/29/n14005878.md#1">第20届苗栗县议会 温俊勇、黎尚安议员质询</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/31/n14007284.md#1">第20届苗栗县议会黄声全 陈光轩议员质询</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309002.md#1">2024年台产蜂蜜品质评鉴 职人蜂蜜珍稀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309026.md#1">苗栗与德岛签署互惠友好M O U 促进观光经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308657.md#1">大湖尊梨评鉴竞赛 副县长大力行销</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278972.md#1" target="_blank">阚神州：中共行株连之罪恶 肇残民之祸</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/16/n10149315.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/18/n13999285.md#1">【古道人生】未婚夫突然疯了未婚妻怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004224.md#1">传奇名妓苏小小到底是谁？连乾隆皇帝都去过苏小小墓！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/26/n14004563.md#1">【未解之谜】中国境内的史前避难所</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005612.md#1">美国修女下葬4年肉身不腐 被信徒视为神迹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14006059.md#1">【未解之谜】虎妈与鸡娃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/2/n14008712.md#1">【全球新闻】川普造势：5个月让美国再次伟大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14008400.md#1">【菁英论坛】反战情绪高涨 中共2025年敢动武吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14008316.md#1">【环球直击】台美21世纪贸易倡议 首批协定签署</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007556.md#1">挖土石量是三峡大坝三倍 中共建新运河引担忧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006930.md#1">谷歌商店一款流行App被指开始监视用户</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007109.md#1">【翻墙必看】中共喉舌不敢公开政治局会议？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007169.md#1">41岁叶家妤怀第三胎 胞妹白家绮感动抱着哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006719.md#1">杨丽花纪录片开拍：歌仔戏是我的生命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007583.md#1">满脸皱纹双眼凸出 李连杰苍老模样引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006919.md#1">与胡歌合拍新片 高圆圆开工照现鱼尾纹仍获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/30/n14006891.md#1">偕刘嘉玲与寿司师傅合照 梁朝伟现社交恐惧症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/11/n13993859.md#1">研究发现脂肪肝源于肠道菌！灭菌需戒2种饮食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005513.md#1">40岁以后易健忘 小心这9件事加速大脑老化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/31/n14007259.md#1">10种常见食物对小猫有害 吃了可能会死掉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/25/n14003921.md#1">这种体质血压易飙升 4招稳血压 控盐还有1秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005937.md#1">气炸锅鱼条用这招 别提有多香了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/2/n14008785.htm">第20届苗栗县议会 余文忠许樱萍议员质询</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/6/2/n14008785.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/2/n14008785.htm">第20届苗栗县议会 余文忠许樱萍议员质询</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/2/n14008785.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
